@@ -21,6 +21,9 @@ Version 2.9.1
 -------------
 * Don't forget to apply filters to "perflevel" caches detected on recent
   Mac OS X releases, thanks to Michel Lesoinne for the report.
+* Fix a failed assertion in hwloc_topology_restrict() when some NUMA nodes
+  are removed because of HWLOC_RESTRICT_FLAG_REMOVE_CPULESS but no PUs are.
+  Thanks to Mark Grondona for reporting the issue.
 * Mark HPE Cray Slingshot NICs with subtype "Slingshot".
 
 
